fixed social links on small screen to look more like a circle

--- a/css/style.css
+++ b/css/style.css
@@ -783,7 +783,8 @@ large screens
     }
 
     .link-element {
-        width: 100%;
+        width: 40%;
+        height: 7em;
     }
 }
 
